# Rest-API

./: Cargo.toml
src/: main.rs
src/controllers/: accounts.rs  discord.rs  guild_create.rs  mod.rs  test.rs  user.rs
src/controllers/auth/: callback.rs  discord.rs  discord_callback.rs  is_authenticated.rs  mod.rs  sign_in.rs  sign_up.rs
src/controllers/authentication/: discord_callback.rs  get_guilds.rs
src/errors/: database.rs
src/middlewares/: is_authenticated_middleware.rs  is_me_auth.rs  mod.rs
src/models/: cookies.rs  user.rs
src/models/auth/: discord.rs  mod.rs  sign_in.rs  sign_up.rs
src/old_controllers/: discord.rs  mod.rs  test.rs  user.rs
src/old_controllers/auth/: discord.rs  mod.rs
src/old_routes/: test.rs  user.rs
src/old_routes/auth/: discord.rs
src/routes/: accounts.rs  discord.rs  guild_create.rs  mod.rs  test.rs  user.rs
src/routes/auth/: callback.rs  discord.rs  mod.rs  sign_in.rs  sign_up.rs
src/routes/authentication/: discord_callback.rs  get_guilds.rs  mod.rs
src/utils/: mod.rs  surreal_int.rs
