[package]
name = "rust-guild-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
shuttle-actix-web = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1.44.1"
surrealdb = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
actix-cors = "0.7.1"
cookie-rs = "0.4.1"
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }